# micko-peg

./: Cargo.toml  README.md
src/: lib.rs  main.rs  minic.pest  symtab.rs
tests/: test-ok1.mc  test.rs
