[package]
name = "micko-peg"
version = "0.1.0"
authors = ["BojanStipic <bojanstipic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.9"
pest = "2.1.2"
pest_derive = "2.1.0"
bitflags = "1.2.1"
